--- a/plugins/org.jkiss.dbeaver.data.gis.view/web/view_template.html
+++ b/plugins/org.jkiss.dbeaver.data.gis.view/web/view_template.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
 
 <head>
-    <title>Quick Start - Leaflet</title>
+    <title>DBeaver GIS viewer - Leaflet</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="inc/leaflet.css" />
